error was removed

--- a/.hintrc
+++ b/.hintrc
@@ -12,7 +12,8 @@
     "axe/text-alternatives": [
       "default",
       {
-        "image-alt": "off"
+        "image-alt": "off",
+        "frame-title": "off"
       }
     ],
     "no-inline-styles": "off",
@@ -32,6 +33,14 @@
       "default",
       {
         "button-name": "off"
+      }
+    ],
+    "compat-api/html": [
+      "default",
+      {
+        "ignore": [
+          "iframe[loading]"
+        ]
       }
     ]
   }
